--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     background-color: #1a1a1a;
     color: #f0f0f0;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
 }
 
 header {
@@ -19,56 +19,68 @@ header {
     align-items: center;
     padding: 20px 10%;
     background-color: #333;
-    flex: 90;
-    max-height: 90vh;          
+    flex: 90;  
+    min-height: 70vh;     
 }
+
 
 .logo-container {
     display: flex;
     justify-content: center;
+    align-items: center;
     flex: 85;
 }
 
 .logo {
     max-width: 80%;
-    height: auto;
-    max-height: 85vh;
+    height: 300px;  
+}
+
+main {
+    height: 10vh;
+}
+
+nav {
+    position: sticky;     
+    top: 0;
+    background: #333;
 }
 
 .nav-links {
     display: flex;
     list-style: none;
-    flex-direction: row;    
-    justify-content: flex-end;
-    flex: 15;
-    z-index: 9999;  
-    position: relative;  
+    flex-direction: row; 
+    justify-content: center; 
+    flex: 15;       
+    flex-wrap: wrap;  
 }
 
 .nav-links li {
     border: 2px solid peachpuff;
-    box-shadow: 5px 5px 15px rgba(255, 218, 185, 0.5);
+    box-shadow: 5px 5px 15px rgba(245, 159, 226, 0.5);
     transition: all 0.3s ease;
     padding: 10px;
-    margin: 5px;
-    width: 100px;
+    margin: 5px;   
     text-align: center;
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    border-radius: 15px; 
+    width: auto;       
 }
 
-.nav-links li:hover {
-    transform: scale(1.1);
-    box-shadow: 0px 0px 20px rgba(255, 223, 0, 0.5);
-    border-color: goldenrod;
+.nav-links i {
+    color: #f7a987;
+}
+
+.nav-links li span {
+    display: none; 
 }
 
 .nav-links a {
     color: #f0f0f0;
     text-decoration: none;
-    font-size: 1.1rem;
-}
-
-.nav-links a:hover {
-    color: #ff007f;
+    font-size: 1rem;
 }
 
 main {
@@ -77,16 +89,14 @@ main {
 
 .objective {
     padding: 50px 10%;
-    text-align: left;
-    color: #f0f0f0;
-    font-family: Arial, sans-serif;
-    line-height: 1.5;
+    padding-top: 5%;
 }
 
 .objective h1 {
     text-transform: uppercase;
     font-family: Impact, Charcoal, sans-serif;
     font-size: 3.5vh;
+    padding-bottom: 3%;
 }
 
 .objective p, .objective li {
@@ -94,7 +104,9 @@ main {
 }
 
 .objective ul {
-    margin-left: 20px;
+    margin-left: 40px;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 footer {
@@ -109,7 +121,7 @@ footer {
         flex-direction: row;
         justify-content: space-between;
         padding: 20px;
-        flex: 9;
+        min-height: 90vh
     }
 
     .logo-container {
@@ -118,23 +130,62 @@ footer {
 
     .logo {
         max-width: 100%;
+        height: auto;
     }
 
-    .nav-links {  
+    nav {
+        position: relative;     
+        top: 0;
+        background: #333;
+    }
+
+    .nav-links {          
         display: flex;      
         flex-direction: column;
         justify-content: center;
         align-items: flex-end;
-        padding: 0;     
+        padding: 0;   
     }
+
+    .nav-links li {
+        width: 200px;  
+    }
+
+    .nav-links li span {
+        display: contents;
+    }
+
+    .nav-links li:hover {
+        transform: scale(1.1);
+        box-shadow: 0px 0px 20px rgba(245, 159, 226, 0.5);
+        border-color: goldenrod;
+        color: #ee82b8;
+    }    
+
+    .nav-links a:hover {
+        color: #ee82b8
+    }
+
+    .nav-links i:hover {
+        color: #ee82b8
+    }
+
+
 
 
     main {
-        flex: 1;
+        height: 10vh
     }
 
     .objective {
-        padding: 30px 5%;
+        padding: 50px 10%;
+        padding-top: 1.5vh;
+        text-align: left;
+        color: #f0f0f0;
+        font-family: Arial, sans-serif;
+        line-height: 1.5;
+        padding-left: 200px;    
+    
     }
 
     .objective h1 {
