--- a/styles.css
+++ b/styles.css
@@ -187,6 +187,7 @@ footer {
 
     .objective h1 {
         font-size: 5vh;
+        padding-bottom: 1%;
     }
 
     .objective p, .objective li {
