--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,58 @@ main {
     padding-bottom: 2%;
 }
 
+#interview-images {
+    background-color: #1a1a1a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    padding: 20px;
+    border-top: 3px solid purple;
+    box-shadow: 0 0 10px purple, 0 0 5px darkviolet;
+}
+
+.interview-image-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    max-width: 1200px;
+    width: 100%;
+    padding: 20px 0;
+}
+
+.interview-image-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #333;
+    width: 30%;
+    height: 300px;
+    margin: 10px;
+    border-radius: 15px;
+    overflow: hidden;    
+}
+
+.interview-image-wrapper img {
+    height: 90%;
+    width: 90%;
+    object-fit: cover;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+    .interview-image-container {
+        flex-direction: column;
+    }
+
+    .interview-image-wrapper {
+        width: 60%;
+        height: 200px;
+    }
+}
+
 footer {
     padding: 50px 10%;
     text-align: center;
@@ -315,6 +367,32 @@ footer a {
 
 .carousel-button-next {
     right: 10px;
+}
+
+#interview-modal .modal-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+#interview-modal .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+#interview-modal img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
+
+@media screen and (max-width: 768px) {
+    #interview-modal img {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 /* Resume modal */
